Sidebar menu active states and alignment fixes

--- a/services/web/src/layouts/Sidebar/sidebar.less
+++ b/services/web/src/layouts/Sidebar/sidebar.less
@@ -1,6 +1,7 @@
 @import '../../styles/responsive';
+@import '../../semantic/globals/site.variables';
 
-@padding: 25px;
+@padding: 0;
 @menuWidth: 250px;
 
 // TODO: (@skatey)
@@ -109,12 +110,28 @@
     }
   }
 
+  .logo {
+    margin: 25px 25px 0 25px;
+  }
+
   .ui.menu .active.item.logo {
     background: none;
   }
 
+  .ui.menu.secondary .item {
+    border-left: 3px solid transparent;
+    border-radius: 0 !important;
+    margin-left: -13px;
+    padding-left: 10px;
+  }
+
+  .ui.menu .active.item {
+    border-left: 3px solid @primaryColor;
+    background-color: rgba(@primaryColor, .1);
+  }
+
   .ui.menu .header {
-    padding: 0.78571429em 0.46em;
+    padding: 0.78571429em 0.46em 0.78571429em 0;
     text-transform: uppercase;
     font-size: 11px;
     color: #ABADB3;
